--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,13 @@
 ###> IDE metadata ###
 /.idea
 ###< IDE metadata ###
+###> symfony/web-server-bundle ###
+/.web-server-pid
+###< symfony/web-server-bundle ###
+
+###> symfony/webpack-encore-pack ###
+/node_modules/
+/public/build/
+npm-debug.log
+yarn-error.log
+###< symfony/webpack-encore-pack ###
