--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
     "devDependencies": {
-        "@symfony/webpack-encore": "^0.17.0"
+        "@symfony/webpack-encore": "^0.19.0",
+        "babel-preset-react": "^6.24.1",
+        "prop-types": "^15.6.1",
+        "react": "^16.2.0",
+        "react-dom": "^16.2.0"
     },
     "license": "UNLICENSED",
     "private": true,
