--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
         "dev-server": "encore dev-server",
         "dev": "encore dev",
         "watch": "encore dev --watch",
-        "build": "encore production"
+        "build": "encore production",
+        "heroku-postbuild" : "yarn run encore production"
     },
     "dependencies": {
         "material-ui": "^0.20.0"
