--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -16,7 +16,7 @@ doctrine:
             collate: utf8mb4_unicode_ci
 
         # With Symfony 3.3, remove the `resolve:` prefix
-        url: '%env(resolve:DATABASE_URL)%'
+        url: '%env(DATABASE_URL)%'
     orm:
         auto_generate_proxy_classes: '%kernel.debug%'
         naming_strategy: doctrine.orm.naming_strategy.underscore
