Configured test database settings, gd list and get methods implemented

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,7 @@ yarn-error.log
 .phpunit
 /phpunit.xml
 ###< symfony/phpunit-bridge ###
+
+###> phpunit/phpunit ###
+/phpunit.xml
+###< phpunit/phpunit ###
