--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "symfony/yaml": "^4.0"
     },
     "require-dev": {
+        "phpunit/phpunit": "6.5",
         "symfony/browser-kit": "^4.0",
         "symfony/css-selector": "^4.0",
         "symfony/dotenv": "^4.0",
