--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,7 @@
         "php": "^7.1.3",
         "ext-iconv": "*",
         "doctrine/doctrine-fixtures-bundle": "^3.0",
+        "friendsofsymfony/rest-bundle": "^2.3",
         "jms/serializer-bundle": "^2.3",
         "sensio/framework-extra-bundle": "^5.1",
         "symfony/apache-pack": "^1.0",
@@ -15,9 +16,13 @@
         "symfony/lts": "^4@dev",
         "symfony/maker-bundle": "^1.3",
         "symfony/orm-pack": "^1.0",
+        "symfony/translation": "^4.0",
         "symfony/twig-bundle": "^4.0",
         "symfony/webpack-encore-pack": "^1.0",
-        "symfony/yaml": "^4.0"
+        "symfony/yaml": "^4.0",
+        "white-october/pagerfanta-bundle": "^1.1",
+        "willdurand/hateoas": "^2.12",
+        "willdurand/hateoas-bundle": "^1.4"
     },
     "require-dev": {
         "phpunit/phpunit": "6.5",
