--- a/config/services.yaml
+++ b/config/services.yaml
@@ -31,3 +31,10 @@ services:
         arguments: ['%kernel.debug%']
         tags:
             - { name: kernel.event_subscriber }
+
+    App\Api\GetActionHandler:
+        arguments: ['@doctrine']
+        public: true
+
+    App\Api\ListActionHandler:
+        public: true
