--- a/config/packages/fos_rest.yaml
+++ b/config/packages/fos_rest.yaml
@@ -1,7 +1,7 @@
 # Read the documentation: https://symfony.com/doc/master/bundles/FOSRestBundle/index.html
 fos_rest:
     view:
-        view_response_listener: force
+        view_response_listener: true
     format_listener:
         rules:
             - { path: '^/api', prefer_extension: false, fallback_format: json, priorities: [ json ] }
