--- a/config/services.yaml
+++ b/config/services.yaml
@@ -38,3 +38,6 @@ services:
 
     App\Api\ListActionRepresentationMaker:
         public: true
+
+    jms_serializer.naming_strategy:
+        alias: jms_serializer.identical_property_naming_strategy
