Frontend draft started

--- a/package.json
+++ b/package.json
@@ -13,9 +13,15 @@
         "dev": "encore dev",
         "watch": "encore dev --watch",
         "build": "encore production",
-        "heroku-postbuild" : "yarn run encore production"
+        "heroku-postbuild": "yarn run encore production"
     },
     "dependencies": {
-        "material-ui": "^0.20.0"
+        "axios": "^0.18.0",
+        "lodash": "^4.17.5",
+        "material-ui": "^0.20.0",
+        "react-redux": "^5.0.7",
+        "react-router-dom": "^4.2.2",
+        "redux": "^3.7.2",
+        "redux-promise": "^0.5.3"
     }
 }
