--- a/package.json
+++ b/package.json
@@ -17,6 +17,11 @@
     },
     "dependencies": {
         "axios": "^0.18.0",
+        "babel": "^6.23.0",
+        "babel-preset-es2015": "^6.24.1",
+        "babel-preset-es2017": "^6.24.1",
+        "babel-preset-stage-1": "^6.24.1",
+        "babel-preset-stage-3": "^6.24.1",
         "lodash": "^4.17.5",
         "material-ui": "^0.20.0",
         "react-redux": "^5.0.7",
