--- a/composer.json
+++ b/composer.json
@@ -12,12 +12,13 @@
         "symfony/asset": "^4.0",
         "symfony/console": "^4.0",
         "symfony/flex": "^1.0",
+        "symfony/form": "^4.0",
         "symfony/framework-bundle": "^4.0",
         "symfony/lts": "^4@dev",
-        "symfony/maker-bundle": "^1.3",
         "symfony/orm-pack": "^1.0",
         "symfony/translation": "^4.0",
         "symfony/twig-bundle": "^4.0",
+        "symfony/validator": "^4.0",
         "symfony/webpack-encore-pack": "^1.0",
         "symfony/yaml": "^4.0",
         "white-october/pagerfanta-bundle": "^1.1",
@@ -29,6 +30,7 @@
         "symfony/browser-kit": "^4.0",
         "symfony/css-selector": "^4.0",
         "symfony/dotenv": "^4.0",
+        "symfony/maker-bundle": "^1.3",
         "symfony/phpunit-bridge": "^4.0",
         "symfony/web-server-bundle": "^4.0"
     },
